# Gestio-app

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc  .stylelintrc.json  NOTICE.md  README.md  SECURITY.md  package-lock.json  package.json
src/: i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.disguise.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  crypto.rs  generator.rs  keywrap.rs  lib.rs  main.rs  totp.rs  vault.rs
src/fonts/: OFL.txt
