[package]
name = "gestio"
version = "0.58.3"
description = "Gestionnaire de mots de passe local"
authors = ["Jerome Pira"]
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "gestio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
getrandom = "0.2"
zeroize = "1"
base64 = "0.22"
sha1 = "0.10"
hmac = "0.12"
csv = "1"
ureq = { version = "2", features = ["tls"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_Shell", "Win32_Foundation"] }

[profile.release]
overflow-checks = true
